# w2vu2

./: .gitignore  pyproject.toml
config/gan/: w2vu2.yaml
scripts/: prepare_audio_v2.sh  wav2vec_extract_features.py
xps/: debug.sh  lr_sweep.sh
